--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
 
   app:
     build: .
-    container_name: xdebug-app-faculdade
+    container_name: xdebug-app-hyperlocal
     environment:
       - XDEBUG_CONFIG=client_host=172.17.0.1 client_port=9003 start_with_request=yes log=/var/log/xdebug.log
       - XDEBUG_MODE=debug
@@ -23,7 +23,7 @@ services:
 
   nginx:
     build: .docker/nginx
-    container_name: xdebug-nginx-faculdade
+    container_name: nginx-app-hyperlocal
     restart: always
     tty: true
     ports:
@@ -36,7 +36,7 @@ services:
       - app
   db:
     build: ./.docker/mysql
-    container_name: xdebug-db
+    container_name: db-app-hyperlocal
     restart: always
     tty: true
     ports:
