--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "phpmd/phpmd": "^2.12"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -18,6 +19,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
+        "phpstan/phpstan": "^1.6",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
