--- a/.github/workflows/on_push_master.yml
+++ b/.github/workflows/on_push_master.yml
@@ -29,10 +29,10 @@ jobs:
         run: sudo composer install
 
       - name: Run PHP STAN
-        run: vendor/bin/phpstan analyse src/ tests/ --level 5
+        run: vendor/bin/phpstan analyse app/Http/Helpers/ app/Http/Services/ tests/ --level 5
 
       - name: Run PHPMD
-        run: vendor/bin/phpmd . github codesize,controversial,design,naming,unusedcode --exclude 'vendor/*'
+        run: vendor/bin/phpmd ./app/Http/ github codesize,controversial,design,naming,unusedcode --exclude 'vendor/*
 
 
 
