fix phpmd command problem

--- a/.github/workflows/on_push_master.yml
+++ b/.github/workflows/on_push_master.yml
@@ -32,7 +32,7 @@ jobs:
         run: vendor/bin/phpstan analyse app/Http/Helpers/ app/Http/Services/ tests/ --level 5
 
       - name: Run PHPMD
-        run: vendor/bin/phpmd ./app/Http/ github codesize,controversial,design,naming,unusedcode --exclude 'vendor/*
+        run: vendor/bin/phpmd ./app/Http/ github codesize,controversial,design,naming,unusedcode --exclude 'vendor/*'
 
       - name: Run PHP Unit
         run: vendor/bin/phpunit
