--- a/.github/workflows/on_push_master.yml
+++ b/.github/workflows/on_push_master.yml
@@ -34,5 +34,8 @@ jobs:
       - name: Run PHPMD
         run: vendor/bin/phpmd ./app/Http/ github codesize,controversial,design,naming,unusedcode --exclude 'vendor/*'
 
+      - name: Generate Laravel key
+        run: php artisan key:generate
+
       - name: Run PHP Unit
         run: vendor/bin/phpunit
