--- a/.github/workflows/on_push_master.yml
+++ b/.github/workflows/on_push_master.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up MySQL
         uses: mirromutth/mysql-action@v1.1
         with:
-          mysql version: '5.6'
+          #mysql version: '5.6'
           mysql database: 'database'
           mysql root password: root
 
