--- a/.github/workflows/on_push_master.yml
+++ b/.github/workflows/on_push_master.yml
@@ -22,9 +22,10 @@ jobs:
       - name: Set up MySQL
         uses: mirromutth/mysql-action@v1.1
         with:
-          #mysql version: '5.6'
+          character set server: 'utf8'
+          collation server: 'utf8_general_ci'
           mysql database: 'database'
-          mysql root password: root
+          mysql root password: 'root'
 
       - name: Checkout project
         uses: actions/checkout@v2
