--- a/.github/workflows/on_push_master.yml
+++ b/.github/workflows/on_push_master.yml
@@ -22,8 +22,7 @@ jobs:
       - name: Set up MySQL
         uses: mirromutth/mysql-action@v1.1
         with:
-          character set server: 'utf8'
-          collation server: 'utf8_general_ci'
+          mysql version: '5.7'
           mysql database: 'database'
           mysql root password: 'root'
 
